--- a/requirements.txt
+++ b/requirements.txt
@@ -66,6 +66,7 @@ idna==2.6
 imageio==2.2.0
 imagesize==0.7.1
 imbalanced-learn==0.3.3
+implicit=0.3.8
 ipykernel==4.6.1
 ipython==6.1.0
 ipython-genutils==0.2.0
